# nlp_pipelines

./: README.md  app.py  nlp_transformers.py  pyproject.toml  requirements.txt
templates/: index.html
